--- a/src/css/Alert.module.css
+++ b/src/css/Alert.module.css
@@ -3,7 +3,7 @@
   margin: 8px;
   padding: 12px 16px;
   border-radius: 4px;
-  background-color: azure;
+  background-color: black;
   color: rgb(2, 253, 43);
 }
 .myIcon {
